# kaval

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release_linux.yml  release_mac.yml
scripts/: uninstall.sh
src/: cli.rs  main.rs  models.rs  scanner.rs  theme.rs  ui.rs  util.rs
